first grid test

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
-<html>
-
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
 <head>
-<title>HOME PAGE</title>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HOME PAGE</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-<h1> Nilufar Chaus</h1> 
+  <section class="row"> <h1> Nilufar's Homepage</h1>
+  </section>
+
+  <section class="row">
+    <article class="column small-12 medium-6 large-3">
+      <h1>welcome</h1>
+      <p>is this for me</p>
+    </article>
+    <article class="column small-12 medium-6 large-3">
+      <h1>welcome</h1>
+      <p>is this for me</p>
+    </article>
+    <article class="column small-12 medium-6 large-3">
+      <h1>welcome</h1>
+      <p>is this for me</p>
+    </article>
+    <article class="column small-12 medium-6 large-3">
+      <h1>welcome</h1>
+      <p>is this for me</p>
+    </article>
+  </section>
+
+  <section class="row">
+  </section>
+  <section class="row">
+  </section>
+
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
