--- a/index.html
+++ b/index.html
@@ -9,32 +9,24 @@
 </head>
 
 <body>
-  <section class="row"> <h1> Nilufar's Homepage</h1>
-  </section>
+ <div class="wrapper">
 
-  <section class="row">
-    <article class="column small-12 medium-6 large-3">
-      <h1>welcome</h1>
-      <p>is this for me</p>
-    </article>
-    <article class="column small-12 medium-6 large-3">
-      <h1>welcome</h1>
-      <p>is this for me</p>
-    </article>
-    <article class="column small-12 medium-6 large-3">
-      <h1>welcome</h1>
-      <p>is this for me</p>
-    </article>
-    <article class="column small-12 medium-6 large-3">
-      <h1>welcome</h1>
-      <p>is this for me</p>
-    </article>
-  </section>
+<header class="row">
+  <h1 class="columns small-12 medium-6 large-4"> Logo</h1>
 
-  <section class="row">
-  </section>
-  <section class="row">
-  </section>
+  <nav >
+    <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+    <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
+    <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+</header>
+
+<footer class="row">
+  <h6> Copyright 2017 all rights reserved </h6>
+
+</footer>
+
+
+ </div>
 
 
 <script src="js/vendor/jquery.js"></script>
