addition of gallery

--- a/image1.html
+++ b/image1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HOME PAGE</title>
+  <title>ABOUT PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
@@ -12,20 +12,25 @@
  <div class="wrapper">
 
 <header class="row">
-  <h1 class="columns small-12 medium-6 large-4"> Logo</h1>
+  <h1> Bio </h1>
 
-  <nav >
+  <nav>
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
     <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
-</header>
-<figure class="coulmns small-12">
-<img data-interchange="
-[images/peace-sm.png, small],
-[images/peace-md.png, medium],
-[images/peace-lg.png, large]">
+  </nav>
 
-</figure>
+</header>
+
+<section>
+  <img src="images/peace-lg.png" alt="peace">
+  <img data-interchange="[images/peace-lg.png, large][images/peace-md.png, medium][images/peace-sm.png, small]" class="thumbnail" alt="Peace Out School">
+  <figcaption> Peace out School, I done graduated!
+  </figcaption>
+</section>
+
+<nav>
+</nav>
 
 <footer class="row">
   <h6> Copyright 2017 all rights reserved </h6>
