--- a/portfolio.html
+++ b/portfolio.html
@@ -20,27 +20,39 @@
     <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
 </header>
 
+
+<h1> Photography </h1>
 <div class="row small-up-2 medium-up-3 large-up-4">
 
+
   <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="saturated kitten" alt="">
-    <figcaption>KITTY FACE</figcaption>
+    <img data-interchange="[images/peace-md.png, medium][images/peace-sm.png, small]" class="thumbnail" alt="Peace Out School">
   </div>
+
   <div class="column column-block">
-    <img src="http://placekitten.com/600/600" class="thumbnail" alt="">
+    <img data-interchange="[images/pine-md.png, medium][images/pine-sm.png, small]" class="thumbnail" alt="Pinecone">
   </div>
+
   <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
+    <img data-interchange="[images/pink-md.png, medium][images/pink-sm.png, small]" class="thumbnail" alt="Pink Flower">
   </div>
+
   <div class="column column-block">
-    <img src="http://placekitten.com/600/600" class="thumbnail" alt="">
+    <img data-interchange="[images/purp-md.png, medium][images/purp-sm.png, small]" class="thumbnail" alt="Purple Flower">
   </div>
+
   <div class="column column-block">
-    <img src="http://placekitten.com/g/600/600" class="thumbnail" alt="">
+    <img data-interchange="[images/smile-md.png, medium][images/smile-sm.png, small]" class="thumbnail" alt="Smile 2015">
   </div>
+
   <div class="column column-block">
-    <img src="http://placekitten.com/600/600" class="thumbnail" alt="">
+  <img data-interchange="[images/air-md.png, medium][images/air-sm.png, small]" class="thumbnail" alt="Air">
   </div>
+
+  <div class="column column-block">
+    <img data-interchange="[images/belly-md.png, medium][images/belly-sm.png, small]" class="thumbnail" alt="belly">
+  </div>
+
 </div>
 
 <footer class="row">
