--- a/about.html
+++ b/about.html
@@ -6,23 +6,24 @@
   <title>ABOUT PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
  <div class="wrapper">
 
 <header class="row">
-  <h1> Bio </h1>
+    <h1 class="columns small-12 medium-6 large-4"> Biography</h1>
 
-  <nav>
-    <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-    <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    <nav class="columns small-12 medium-6 large-4">
+      <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+      <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
+      <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    </nav>
 </header>
 
 <footer class="row">
-  <h6> Copyright 2017 all rights reserved </h6>
-
+  <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
 </footer>
 
 
