--- a/image1.html
+++ b/image1.html
@@ -6,23 +6,23 @@
   <title>ABOUT PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
  <div class="wrapper">
 
 <header class="row">
-  <h1> Bio </h1>
+  <h1 class="columns small-12 medium-6 large-4"> Portfolio </h1>
 
-  <nav>
+  <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
     <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
   </nav>
-
 </header>
 
-<section>
+<section class="columns small-12 medium-2 large-1">
   <img src="images/peace-lg.png" alt="peace">
   <img data-interchange="[images/peace-lg.png, large][images/peace-md.png, medium][images/peace-sm.png, small]" class="thumbnail" alt="Peace Out School">
   <figcaption> Peace out School, I done graduated!
@@ -33,7 +33,7 @@
 </nav>
 
 <footer class="row">
-  <h6> Copyright 2017 all rights reserved </h6>
+  <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
 
 </footer>
 
