--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
   <title>HOME PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
+<link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
  <div class="wrapper">
 
 <header class="row">
-  <h1 class="columns small-12 medium-6 large-4"> Logo</h1>
+  <h1 class="columns small-12 medium-6 large-4"> It was all a Nilusion...</h1>
 
-  <nav >
+  <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
+  </nav>
+
 </header>
+
 <figure class="coulmns small-12">
 <img data-interchange="
 [images/peace-sm.png, small],
@@ -28,7 +32,7 @@
 </figure>
 
 <footer class="row">
-  <h6> Copyright 2017 all rights reserved </h6>
+  <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
 
 </footer>
 
