--- a/portfolio.html
+++ b/portfolio.html
@@ -6,22 +6,25 @@
   <title>PORTFOLIO PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
  <div class="wrapper">
 
 <header class="row">
-  <h1> Portfolio</h1>
+  <h1 class="columns small-12 medium-6 large-4"> Portfolio </h1>
 
-  <nav>
+  <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
+  </nav>
 </header>
 
 
-<h1> Photography </h1>
+<h2 class="columns small-12 medium-6 large-4"> Photography </h2>
+
 <div class="row small-up-2 medium-up-3 large-up-4">
 
 
@@ -56,8 +59,7 @@
 </div>
 
 <footer class="row">
-  <h6> Copyright 2017 all rights reserved </h6>
-
+  <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
 </footer>
 
 
