--- a/animations/index.html
+++ b/animations/index.html
@@ -23,10 +23,11 @@
       <p>THE HISTORY OF WOMAN IS THE HISTORY OF MAN.
       </p>
 
-<div id="male-female">
+<div id="male">
 </div>
 
-
+<div id="female">
+</div>
 
       <p>because man has defined the image of woman for both man and woman,
         men create and control the social and communication media such as science and art,
