animation 1 complete-intro to animation 2

--- a/animations/index.html
+++ b/animations/index.html
@@ -11,23 +11,34 @@
 
 <body>
 
-  <h1 id="name">  VALIE EXPORT</h1>
+  <div class="wrapper">
 
-  <h1 id="title">  WOmen'S ART: A manIFESTO 1972</h1>
+  <header>
+
+   <nav class="columns small-12 medium-6 large-4">
+     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+     <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
+     <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
+     <a href="ani3.html" class="columns small-12 medium-2 large-1"> Animation 3 </a>
+   </nav>
+
+  </header>
 
 
-  <section>
+    <h1 id="name">  VALIE EXPORT</h1>
+
+    <h1 id="title">  WOmen'S ART: A manIFESTO 1972</h1>
+
+
+<!--<img src="images/final.png">-->
+
+
+
       <p>THE POSITION OF ART IN THE WOMEN'S LIBERATION MOVEMENT IS THE POSITION OF WOMAN IN THE ART'S MOVEMENT.
       </p>
 
       <p>THE HISTORY OF WOMAN IS THE HISTORY OF MAN.
       </p>
-
-<div id="male">
-</div>
-
-<div id="female">
-</div>
 
       <p>because man has defined the image of woman for both man and woman,
         men create and control the social and communication media such as science and art,
@@ -48,8 +59,6 @@
         this is what I ask for in order to achieve a self-defined image of ourselves and thus a different view of the social function of women.
         we women must participate in the construction of reality via the building stones of media-communication.
       </p>
-
-  </section>
 
 <div>
 
