--- a/animations/ani2.html
+++ b/animations/ani2.html
@@ -8,6 +8,17 @@
   </head>
 
 
+  <header>
+
+   <nav class="columns small-12 medium-6 large-4">
+     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+     <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
+     <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
+     <a href="ani3.html" class="columns small-12 medium-2 large-1"> Animation 3 </a>
+   </nav>
+
+  </header>
+
 
 <body>
 
