--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -7,8 +7,6 @@ Copyright (c) 2017 by ianpollock (http://jsbin.com/decetu/8/edit)
 
 Released under the MIT license: http://jsbin.mit-license.org
 -->
-<meta name="robots" content="noindex">
-<meta charset="utf-8">
 <html>
 <head>
   <meta charset="utf-8">
@@ -32,13 +30,22 @@ Released under the MIT license: http://jsbin.mit-license.org
     </div>
 
 <!--CARS INF0-->
-    <img src="http://placebear.com/100/100" id="one">
+    <img src="http://placebear.com/100/100" id="one" alt="my-car">
     <h1 id="two">two</h1>
     <h1 id="three">three</h1>
 
 
 <!--PERSON INF0-->
-    <img src="images/stick1.jpg" id="person">
+
+
+    <img src="images/stick1.jpg" id="person" alt="me-flying">
+
+
+
+<!--PERSON INF0-->
+    <img src="images/cloud.png" id="cloud" alt="me-flying">
+
+
 
 
 
