--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -23,27 +23,35 @@ Released under the MIT license: http://jsbin.mit-license.org
   <div id="wrapper">
 <!--TREES INF0-->
     <div id="trees">
-      <h2 id="t1">First Tree</h2>
-      <h2 id="t2">Second Tree</h2>
-      <h2 id="t3">Third Tree</h2>
-      <h2 id="t4">Forth Tree</h2>
+      <img src="images/t1.png" id="t1" alt="First Tree">
+      <img src="images/t2.png" id="t2" alt="Second Tree">
+      <img src="images/t3.png" id="t3" alt="Third Tree">
+      <img src="images/t41.png" id="t4" alt="Fourth Tree with owl eyes">
+      <img src="images/t1.png" id="t1" alt="Fifth Tree">
+      <img src="images/t2.png" id="t2" alt="Sixth Tree">
+      <img src="images/t3.png" id="t3" alt="Seventh Tree">
     </div>
 
+<!--ROAD INF0-->
+    <img src="images/road.png" id="road" alt="road">
+
 <!--CARS INF0-->
-    <img src="http://placebear.com/100/100" id="one" alt="my-car">
-    <h1 id="two">two</h1>
-    <h1 id="three">three</h1>
+    <img src="images/two.png" id="two"alt="second-car">
+    <img src="images/one.png" id="one" alt="my-car">
+    <img src="images/three.png" id="three"alt="third-car">
 
-
-<!--PERSON INF0-->
-
-
-    <img src="images/stick1.jpg" id="person" alt="me-flying">
-
-
+<!--TRUCK INF0-->
+    <img src="images/truck.png" id="truck" alt="truck">
 
 <!--PERSON INF0-->
-    <img src="images/cloud.png" id="cloud" alt="me-flying">
+
+    <img src="" id="person" alt="me-flying">
+  <!--  <img src="images/stick1.jpg" id="person" alt="me-flying"-->
+
+
+
+<!--PERSON INF0
+    <img src="images/cloud.png" id="cloud" alt="me-flying">-->
 
 
 
