person and cloud addition

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -21,12 +21,15 @@ Released under the MIT license: http://jsbin.mit-license.org
 
 
   <div id="wrapper">
+<!--Cloud1 INF0-->
+    <img src="images/cloud.png" id="cloud" alt="cloud-goes-by">
+
 <!--TREES INF0-->
     <div id="trees">
       <img src="images/t1.png" id="t1" alt="First Tree">
       <img src="images/t2.png" id="t2" alt="Second Tree">
       <img src="images/t3.png" id="t3" alt="Third Tree">
-      <img src="images/t41.png" id="t4" alt="Fourth Tree with owl eyes">
+  <!--    <img src="images/t41.png" id="t4" alt="Fourth Tree with owl eyes">-->
       <img src="images/t1.png" id="t1" alt="Fifth Tree">
       <img src="images/t2.png" id="t2" alt="Sixth Tree">
       <img src="images/t3.png" id="t3" alt="Seventh Tree">
@@ -45,13 +48,10 @@ Released under the MIT license: http://jsbin.mit-license.org
 
 <!--PERSON INF0-->
 
-    <img src="" id="person" alt="me-flying">
+    <img src="images/stick1.png" id="person" alt="me-flying">
   <!--  <img src="images/stick1.jpg" id="person" alt="me-flying"-->
 
 
-
-<!--PERSON INF0
-    <img src="images/cloud.png" id="cloud" alt="me-flying">-->
 
 
 
