update including cloud2

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -21,6 +21,11 @@ Released under the MIT license: http://jsbin.mit-license.org
 
 
   <div id="wrapper">
+
+<p class="firstmessage">
+  <strong>Once upon a time</strong>
+</p>
+
 <!--Cloud1 INF0-->
     <img src="images/cloud.png" id="cloud" alt="cloud-goes-by">
 
@@ -46,12 +51,14 @@ Released under the MIT license: http://jsbin.mit-license.org
 <!--TRUCK INF0-->
     <img src="images/truck.png" id="truck" alt="truck">
 
+
 <!--PERSON INF0-->
 
     <img src="images/stick1.png" id="person" alt="me-flying">
   <!--  <img src="images/stick1.jpg" id="person" alt="me-flying"-->
 
-
+<!--Cloud2 INF0-->
+    <img src="images/cloud2.png" id="cloud2" alt="cloud-goes-by">
 
 
 
