--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -60,7 +60,8 @@ Released under the MIT license: http://jsbin.mit-license.org
 <!--Cloud2 INF0-->
     <img src="images/cloud2.png" id="cloud2" alt="cloud-goes-by">
 
-
+<!--Star INF0-->
+<img src="images/star.png" id="star" alt="star-expands">
 
 
 
