--- a/portfolio.html
+++ b/portfolio.html
@@ -10,53 +10,80 @@
 </head>
 
 <body>
- <div class="wrapper">
-
-<header class="row">
-  <h1 class="columns small-12 medium-6 large-4"> Portfolio </h1>
-
-  <nav class="columns small-12 medium-6 large-4">
+<div id="container">
+  <header class="row">
+    <h1 class="columns small-12 medium-6 large-4">Portfolio</h1>
+    <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
     <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
   </nav>
 </header>
 
-
-<h2 class="columns small-12 medium-6 large-4"> Photography </h2>
+<section>
+<h2 class="columns small-12 medium-6 large-4"> Photography Gallery</h2>
 
 <div class="row small-up-2 medium-up-3 large-up-4">
 
+<div>
+  <a href="image1.html">
+  <img src="images/air-thumb.png" class="thumbnail" alt="breathofair">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/peace-md.png, medium][images/peace-sm.png, small]" class="thumbnail" alt="Peace Out School">
-  </div>
+  <a href="image2.html">
+  <img src="images/belly-thumb.png" class="thumbnail" alt="pregnantbelly">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/pine-md.png, medium][images/pine-sm.png, small]" class="thumbnail" alt="Pinecone">
-  </div>
+  <a href="image3.html">
+  <img src="images/cigs-thumb.png" class="thumbnail" alt="cigs">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/pink-md.png, medium][images/pink-sm.png, small]" class="thumbnail" alt="Pink Flower">
-  </div>
+  <a href="image4.html">
+  <img src="images/peace-thumb.png" class="thumbnail" alt="peacesign">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/purp-md.png, medium][images/purp-sm.png, small]" class="thumbnail" alt="Purple Flower">
-  </div>
+  <a href="image5.html">
+  <img src="images/pine-thumb.png" class="thumbnail" alt="pinecone">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/smile-md.png, medium][images/smile-sm.png, small]" class="thumbnail" alt="Smile 2015">
-  </div>
+  <a href="image6.html">
+  <img src="images/pink-thumb.png" class="thumbnail" alt="pinkflower">
+  </a>
 
-  <div class="column column-block">
-  <img data-interchange="[images/air-md.png, medium][images/air-sm.png, small]" class="thumbnail" alt="Air">
-  </div>
+  <a href="image7.html">
+  <img src="images/purp-thumb.png" class="thumbnail" alt="purpleflowers">
+  </a>
 
-  <div class="column column-block">
-    <img data-interchange="[images/belly-md.png, medium][images/belly-sm.png, small]" class="thumbnail" alt="belly">
-  </div>
+  <a href="image8.html">
+  <img src="images/smile-thumb.png" class="thumbnail" alt="smileyEmily">
+  </a>
 
 </div>
+</section>
+
+
+<section>
+ <h2 class="columns small-12 medium-6 large-4"> Responsive Redesign Project</h2>
+ <a href="broncobillysredesign/index.html" class="columns small-12 medium-2 large-1">
+   <img src="images/broncos-thumb.png" class="thumbnail" alt="Broncos homepage screenshot">
+ </a>
+
+</section>
+
+<section>
+ <h2 class="columns small-12 medium-6 large-4"> CSS Animations </h2>
+ <a href="animations/index.html" class="columns small-12 medium-2 large-1">
+   <img src="images/animation-thumb.png" class="thumbnail" alt="CSS Anmations">
+ </a>
+</section>
+
+<section>
+ <h2 class="columns small-12 medium-6 large-4"> One Long Scrolling Website</h2>
+ <a href="project2/index.html" class="columns small-12 medium-2 large-1">
+   <img src="images/long-thumb.png" class="thumbnail" alt="One Long Scrolling Website">
+ </a>
+</section>
+
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
