--- a/image1.html
+++ b/image1.html
@@ -3,34 +3,39 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ABOUT PAGE</title>
+  <title>Gallery Image 1</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
- <div class="wrapper">
+<div id="container">
+  <header class="row">
+    <h1 class="columns small-12 medium-6 large-4">Portfolio</h1>
 
-<header class="row">
-  <h1 class="columns small-12 medium-6 large-4"> Portfolio </h1>
-
-  <nav class="columns small-12 medium-6 large-4">
+    <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
   </nav>
 </header>
 
-<section class="columns small-12 medium-2 large-1">
-  <img src="images/peace-lg.png" alt="peace">
-  <img data-interchange="[images/peace-lg.png, large][images/peace-md.png, medium][images/peace-sm.png, small]" class="thumbnail" alt="Peace Out School">
-  <figcaption> Peace out School, I done graduated!
-  </figcaption>
-</section>
+  <section id="left-column">
+    <img data-interchange="[images/air-sm.png, small][images/air-md.png, medium][images/air-lg.png, large]" alt="Air">
+  </section>
 
-<nav>
-</nav>
+
+  <aside id="right-column">
+  <figcaption>   Graduating Emily, takes a deep breath after finally completing her long journey to a degree.
+  </figcaption>
+  </aside>
+<br  >
+<br  >
+<br  >
+<br  >
+  <a href="portfolio.html">Back To Gallery</a>
+
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
