--- a/image4.html
+++ b/image4.html
@@ -3,40 +3,38 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nilufar's homepage</title>
+  <title>Gallery Image 4</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
-<link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
 <div id="container">
+  <header class="row">
+    <h1 class="columns small-12 medium-6 large-4">Portfolio</h1>
 
-<header class="row">
-  <h1 class="columns small-12 medium-6 large-4"> It was all a Nilusion...</h1>
-
-  <nav class="columns small-12 medium-6 large-4">
+    <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
     <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
   </nav>
-
 </header>
 
-<script src="js/greeting.js"></script>
-
-
-
-
-  <img src="images/air-lg.png">
   <section id="left-column">
-    Published on May 10, 2014
+    <img data-interchange="[images/peace-sm.png, small][images/peace-md.png, medium][images/peace-lg.png, large]" alt="Peace">
   </section>
-  <aside id="right-column">
-    Graduating Emily, takes a deep breath after finally completing her long journey to a degree.
-  </aside>
-</div>
 
+
+  <aside id="right-column">
+  <figcaption>  Peace out escuela!
+  </figcaption>
+  </aside>
+<br  >
+<br  >
+<br  >
+<br  >
+  <a href="portfolio.html">Back To Gallery</a>
 
 
 <footer class="row">
