animations update complete

--- a/animations/ani1.html
+++ b/animations/ani1.html
@@ -2,22 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/ani1.css">
     <title>Women's Art Manifesto</title>
-    <link rel="stylesheet" href="css/animation.css">
-
   </head>
 
 
-  <header>
-
-   <nav class="columns small-12 medium-6 large-4">
-     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-     <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
-     <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
-     <a href="ani3.html" class="columns small-12 medium-2 large-1"> Animation 3 </a>
-   </nav>
-
-  </header>
 
 
 <body>
@@ -34,7 +23,16 @@
 <div class="male-female">
 </div>
 
+<br  >
+<br  >
+<br  >
 
+
+    <nav class="columns small-12 medium-6 large-4">
+      <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+      <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
+      <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
+    </nav>
 
   </body>
 </html>
