--- a/animations/ani2.html
+++ b/animations/ani2.html
@@ -3,24 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Women's Art Manifesto</title>
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/ani2.css">
+    <meta name="viewport" content="width=device-width">
 
   </head>
 
 
-  <header>
-
-   <nav class="columns small-12 medium-6 large-4">
-     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-     <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
-     <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
-     <a href="ani3.html" class="columns small-12 medium-2 large-1"> Animation 3 </a>
-   </nav>
-
-  </header>
-
-
-<body>
 
   <h1 id="name">  VALIE EXPORT</h1>
 
@@ -30,19 +18,28 @@
 
 
 
-<div class="view view-first">
-  <img src="images/tits.jpg">
+<div class="view girl">
+  <img src="images/tits.png">
+  <div class="mask mask-1"></div>
+  <div class="mask mask-2"></div>
 
-  <div class="mask">
-    <h3>slut-shaming</h3>
-    <p>...because man has defined the image of woman for both man and woman,
-            men create and control the social and communication media such as science and art,
-            word and image, fashion and architecture, social transportation and division of labor.
-    </p>
-    </div>
+  <div class="content">
+    <h2>Slut shaming</h2>
+    <p>...because man has defined the image of woman for both man and woman...
+            </p>
+  </div>
+
 </div>
 
+<br  >
+<br  >
+<br  >
 
 
+    <nav class="columns small-12 medium-6 large-4">
+      <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+      <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
+      <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
+    </nav>
   </body>
 </html>
