--- a/animations/index.html
+++ b/animations/index.html
@@ -2,37 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Art Manifesto</title>
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/app.css">
 
   </head>
-
 
 
 <body>
 
   <div class="wrapper">
 
-  <header>
-
-   <nav class="columns small-12 medium-6 large-4">
-     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-     <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
-     <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
-     <a href="ani3.html" class="columns small-12 medium-2 large-1"> Animation 3 </a>
-   </nav>
-
-  </header>
 
 
-    <h1 id="name">  VALIE EXPORT</h1>
 
     <h1 id="title">  WOmen'S ART: A manIFESTO 1972</h1>
-
-
-<!--<img src="images/final.png">-->
-
-
 
       <p>THE POSITION OF ART IN THE WOMEN'S LIBERATION MOVEMENT IS THE POSITION OF WOMAN IN THE ART'S MOVEMENT.
       </p>
@@ -60,7 +44,36 @@
         we women must participate in the construction of reality via the building stones of media-communication.
       </p>
 
+
+
+  <figure>
+    <img src="images/valie.png" alt="Portfolio Item">
+      <!--  <img src="images/valie.png" alt="Portfolio Item">-->
+
+        <figcaption>
+          <h3>Sincerely, VALIE EXPORT</h3>
+        </figcaption>
+
+    </figure>
+<br  >
+<br  >
+<br  >
+
+
+    <nav class="columns small-12 medium-6 large-4">
+
+      <a href="ani1.html" class="columns small-12 medium-2 large-1"> Animation 1</a>
+      <a href="ani2.html" class="columns small-12 medium-2 large-1"> Animation 2 </a>
+    </nav>
+
+
+
+
+
+
+
 <div>
+
 
 </div>
 
