--- a/project2/index.html
+++ b/project2/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
-
-Copyright (c) 2017 by ianpollock (http://jsbin.com/decetu/8/edit)
-
-Released under the MIT license: http://jsbin.mit-license.org
--->
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Nilufar's Prokect 2 long scrolling website</title>
+  <title>Nilufar's Project 2 long scrolling website</title>
   <link rel="stylesheet" href="css/pro2.css">
 
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-<script src="js/pro2.js"></script>
+
+
 </head>
 <body>
 
@@ -57,15 +49,24 @@ Released under the MIT license: http://jsbin.mit-license.org
     <img src="images/stick1.png" id="person" alt="me-flying">
   <!--  <img src="images/stick1.jpg" id="person" alt="me-flying"-->
 
+
+
+<!--Star INF0-->
+
+    <img src="images/star.png" id="star" alt="star-expands">
+
+
 <!--Cloud2 INF0-->
     <img src="images/cloud2.png" id="cloud2" alt="cloud-goes-by">
 
-<!--Star INF0-->
-<img src="images/star.png" id="star" alt="star-expands">
 
 
-
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script src="js/pro2.js"></script>
   </div>
 
 </body>
+
+
+
 </html>
