--- a/about.html
+++ b/about.html
@@ -3,43 +3,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery Image 8</title>
+  <title>ABOUT PAGE</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link href="https://fonts.googleapis.com/css?family=Marcellus|Marcellus+SC" rel="stylesheet">
 </head>
 
 <body>
-<div id="container">
-  <header class="row">
-    <h1 class="columns small-12 medium-6 large-4">Portfolio</h1>
+ <div class="wrapper">
+
+<header class="row">
+    <h1 class="columns small-12 medium-6 large-4"> Biography</h1>
 
     <nav class="columns small-12 medium-6 large-4">
-    <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
-    <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
-  </nav>
+      <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
+      <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
+      <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+    </nav>
 </header>
-
-  <section id="left-column">
-    <img data-interchange="[images/smile-sm.png, small][images/smile-md.png, medium][images/smile-lg.png, large]" alt="smile Emily">
-  </section>
-
-
-  <aside id="right-column">
-  <figcaption> Smiley Emily
-  </figcaption>
-  </aside>
-<br  >
-<br  >
-<br  >
-<br  >
-  <a href="portfolio.html">Back To Gallery</a>
 </body>
-
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
-
 </footer>
 
 
