--- a/image5.html
+++ b/image5.html
@@ -27,7 +27,7 @@
 
 
   <aside id="right-column">
-  <figcaption>  Although Mother Nature choses when to stop nurturing what's nolonger valid in the world today, she still allows her beauty to flourish. 
+  <figcaption>  Although Mother Nature choses when to stop nurturing what's nolonger valid in the world today, she still allows her beauty to flourish.
   </figcaption>
   </aside>
 <br  >
@@ -35,7 +35,7 @@
 <br  >
 <br  >
   <a href="portfolio.html">Back To Gallery</a>
-
+</body>
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
