--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   </aside>
 </div>
 
-
+</body>
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
