--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
    <img src="images/long-thumb.png" class="thumbnail" alt="One Long Scrolling Website">
  </a>
 </section>
-
+</body>
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
