--- a/image1.html
+++ b/image1.html
@@ -36,7 +36,7 @@
 <br  >
   <a href="portfolio.html">Back To Gallery</a>
 
-
+</body>
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
 
