--- a/image7.html
+++ b/image7.html
@@ -35,7 +35,7 @@
 <br  >
 <br  >
   <a href="portfolio.html">Back To Gallery</a>
-
+</body>
 
 <footer class="row">
   <h6> &copy Nilufar Chaus 2017, all rights reserved </h6>
