Long Scrolling presentation addition

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,8 @@
  <h2 class="columns small-12 medium-6 large-4"> One Long Scrolling Website</h2>
  <a href="project2/index.html" class="columns small-12 medium-2 large-1">
    <img src="images/long-thumb.png" class="thumbnail" alt="One Long Scrolling Website">
+
+   <a href="https://docs.google.com/presentation/d/1J-bHifCMzch5gcyFkqvcNWaT3LG9pbOjA7XgEuXcnNQ/pub?start=false&loop=false&delayms=15000" class="columns small-12 medium-2 large-1"> Long scrolling Presentaiton</a>
  </a>
 </section>
 </body>
