--- a/image2.html
+++ b/image2.html
@@ -17,7 +17,7 @@
     <nav class="columns small-12 medium-6 large-4">
     <a href="index.html" class="columns small-12 medium-2 large-1"> Home</a>
     <a href="portfolio.html" class="columns small-12 medium-2 large-1"> Portfolio</a>
-    <a href="about.html" class="columns small-12 medium-2 large-1"> Biography </a>
+    <a href="bio.html" class="columns small-12 medium-2 large-1"> Biography </a>
   </nav>
 </header>
 
